--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 /*  HEADEER  */
 header {
 height: 150px;
-margin-top: 10px;
+padding-top: 10px;
 }
 header li:first-child {
 	border-right: 1px solid #339966;
